# Python-Architecture

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml
app/: models.py  utils.py
scripts/: down.sh  shell.sh  start-dev.sh  sync-env.py  test.sh  up.sh
tests/: test_allocate.py  test_batches.py  test_main.py
